--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Hunter CS2</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Telegram WebApp -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
     <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-
     <div id="app">
-
-        <header>
-            <h1>Hunter CS2</h1>
-            <div id="balance">Loading...</div>
-        </header>
-
-        <main id="content">
-            <!-- динамический контент -->
-        </main>
-
-        <nav>
-            <button onclick="showEarn()">💰 Earn</button>
-            <button onclick="showCase()">🎁 Case</button>
-            <button onclick="showBag()">🎒 Bag</button>
-        </nav>
-
+        <div id="case" onclick="openCase()">🎁</div>
+        <div id="result"></div>
     </div>
-
-    <script src="script.js?v=1"></script>
+    <script src="script.js"></script>
 </body>
 </html>
