--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Hunter CS2</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <div id="case" onclick="openCase()">🎁</div>
-        <div id="result"></div>
+    <div class="app-container">
+        <header>
+            <div class="user-info">
+                <span id="username">Loading...</span>
+                <span id="vip-badge" class="hidden">VIP</span>
+            </div>
+            <div class="balance">
+                <span id="balance">0</span> 💰
+            </div>
+        </header>
+
+        <main id="main-content">
+            <section id="section-case" class="active-section">
+                <div class="case-container">
+                    <img src="https://community.akamai.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXU5A1PIYQNqhpOSV-fRPasw8rsUFJ5KBFZv668FFQwnfCcJm0Zu9m7xYbbw6P1arqCwz8Jup0p3uvH9Iqk0QPt_RVsY2rwI46WcVc3M1CD_1O_w-nshsW7v8zJz3R9-n51Yw1G2A0" alt="Case" class="case-image" id="case-img">
+                </div>
+
+                <div class="roulette-window" id="roulette-window">
+                    <div class="roulette-line"></div>
+                    <div class="items-track" id="items-track">
+                    </div>
+                </div>
+
+                <button class="btn-primary" id="open-btn">OPEN CASE (500💰)</button>
+            </section>
+
+            <section id="section-bag" class="hidden-section">
+                <h2>Inventory</h2>
+                <div class="inventory-grid" id="inventory-grid"></div>
+            </section>
+
+            <section id="section-shop" class="hidden-section">
+                <h2>Shop</h2>
+                <div class="shop-item">
+                    <span>1000 Coins</span>
+                    <button class="btn-buy" onclick="buyItem('coins')">Buy (100 ⭐)</button>
+                </div>
+                <div class="shop-item">
+                    <span>VIP Status</span>
+                    <button class="btn-buy" onclick="buyItem('vip')">Buy (250 ⭐)</button>
+                </div>
+            </section>
+        </main>
+
+        <nav class="bottom-nav">
+            <button class="nav-btn active" data-target="section-case">🔫 Case</button>
+            <button class="nav-btn" data-target="section-bag">🎒 Bag</button>
+            <button class="nav-btn" data-target="section-shop">🛒 Shop</button>
+        </nav>
     </div>
+
+    <div id="drop-modal" class="modal hidden">
+        <div class="modal-content">
+            <h2 id="drop-title">YOU GOT!</h2>
+            <img id="drop-img" src="" alt="">
+            <p id="drop-name"></p>
+            <button class="btn-primary" onclick="closeModal()">COLLECT</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
