--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="balance-box">
-            <img src="../assets/ui/coin.png" class="icon-sm">
+            <img src="/assets/ui/coin.png" class="icon-sm">
             <span id="balance">0</span>
         </div>
     </header>
