--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 </div>
             </div>
         </div>
-        <div class="balance-box">
+       <div class="balance-box">
             <img src="assets/ui/coin.png" class="icon-sm">
             <span id="balance">0</span>
+            <button id="btn-add-funds" class="btn-add">+</button>
         </div>
     </header>
 
